--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
 body{
-    text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 100px;
+    color: white;
 }
